--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production node ."
+    "start": "sudo NODE_ENV=production node ."
   },
   "author": "sunny sarath",
   "license": "ISC",
