--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production node index.js"
+    "start": "npm run build && NODE_ENV=production node index.js",
+    "build": "cd ./app && yarn build"
   },
   "author": "sunny sarath",
   "license": "ISC",
