--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && NODE_ENV=production node index.js",
-    "build": "cd ./app && yarn build"
+    "build": "cd ./app && npm install && npm run build"
   },
   "author": "sunny sarath",
   "license": "ISC",
