--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && NODE_ENV=production node index.js",
+    "start": "NODE_ENV=production node index.js",
     "build": "cd ./app && npm install && npm run build"
   },
   "author": "sunny sarath",
